<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Scores</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test_text">Test</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="champions_league">UEFA Champions League</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="premierleague">Premier League</string>
    <string name="primeradivison">Primera Division</string>
    <string name="seriaa">Serie A</string>
    <string name="matchday_text">Match day</string>
    <string name="group_stage_text">Group stages</string>
    <string name="first_knockout_round">First knockout round</string>
    <string name="quarter_final">Quarter Final</string>
    <string name="semi_final">Semi Final</string>
    <string name="final_text">Final</string>
    <string name="share_text">Share</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">
        This Application get Football Matches Score for the Premier League,Seria A,Bundesliga,Primera Division
        and the Uefa Champions League.
        All Matches data are acquired from football-data.org free API.
        All team Logos are acquired from http://hdlogo.wordpress.com/ upon requesting permission form the owner.
        The original version of this app was created by Yahia Khalid Ibn El Walid Ahmed, and a modified version is given to students in the Udacity Android Nanodegree program.
        To report any bugs,or suggestions do not hesitate to send a mail to y.k.ibnelwalid@gmail.com.

        During the off season, fake data will be added to the app.
    </string>
    <string name="widget_text">This is a widget probably.</string>
    <string name="dummy_data">{\"timeFrameStart\":\"2015-06-18\",\"timeFrameEnd\":\"2015-06-19\",\"count\":1,\"fixtures\":[{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}},{\"_links\":{\"self\":{\"href\":\"http://api.football-data.org/alpha/fixtures/140514\"},\"soccerseason\":{\"href\":\"http://api.football-data.org/alpha/soccerseasons/357\"},\"homeTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/275\"},\"awayTeam\":{\"href\":\"http://api.football-data.org/alpha/teams/263\"}},\"date\":\"2015-06-19T22:00:00Z\",\"status\":\"FINISHED\",\"matchday\":42,\"homeTeamName\":\"TESTING1\",\"awayTeamName\":\"TESTING2\",\"result\":{\"goalsHomeTeam\":2,\"goalsAwayTeam\":4}}]}</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="scores_app_widget_no_data_text">No data to show</string>
    <string name="scores_app_widget_force_refresh_content_description">Forces a data refresh</string>
    <string name="detail_fragment_share_button_content_description">Share this fixture</string>

    <string name="no_items_fetch_status_unknown">No items to display.</string>
    <string name="no_items_fetch_status_ok">No items to display.</string>
    <string name="no_items_fetch_status_network_error">Can\'t connect to the Football service. Please check your internet connection.</string>
    <string name="no_items_fetch_status_protocol_error">Got invalid Football data. Please check if there is an updated version of Football Scores.</string>
    <string name="detail_fragment_league_content_description">League</string>
    <string name="detail_fragment_matchday_content_description">Matchday</string>
    <string name="fragment_about_content_description">About this app</string>
    <string name="fragment_main_scores_no_items_text_content_description">Reason for missing results</string>
    <string name="scores_app_widget_no_data_content_description">No data to show</string>
    <string name="scores_app_widget_headline_content_description">Day for the Fixtures</string>
    <string name="scores_list_item_home_crest_content_description">Home Crest</string>
    <string name="scores_list_item_home_name_content_description">Home name</string>
    <string name="scores_list_item_score_content_description">Score</string>
    <string name="scores_list_item_date_content_description">Date</string>
    <string name="scores_list_item_away_crest_content_description">Away Crest</string>
    <string name="scores_list_item_away_name_content_description">Away name</string>
    <string name="league_serie_a">Seria A</string>
    <string name="league_premier_league">Premier League</string>
    <string name="league_uefa">UEFA Champions League</string>
    <string name="league_primera_division">Primera Division</string>
    <string name="league_Bundesliga">Bundesliga</string>
    <string name="league_unknown">Not known League Please report</string>
    <string name="matchday_staging">Group Stages, Matchday : 6</string>
    <string name="matchday_knockout">First Knockout round</string>
    <string name="matchday_quaterfinal">QuarterFinal</string>
    <string name="matchday_semifinal">SemiFinal</string>
    <string name="matchday_final">Final</string>
    <string name="matchday_matchday">Matchday</string>
</resources>
