<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:background="@drawable/list_item"
    >
    <LinearLayout
        android:id="@+id/scores_list_item_frame"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/scores_list_item_home_crest_content_description"
                android:id="@+id/scores_list_item_home_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/TeamNames"
                android:gravity="center"
                android:text="@string/test_text"
                android:contentDescription="@string/scores_list_item_home_name_content_description"
                android:id="@+id/scores_list_item_home_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/Score"
                android:contentDescription="@string/scores_list_item_score_content_description"
                android:id="@+id/scores_list_item_score_textview"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/test_text"
                android:layout_gravity="center"
                android:gravity="center"
                android:contentDescription="@string/scores_list_item_date_content_description"
                android:id="@+id/scores_list_item_date_textview"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/scores_list_item_away_crest_content_description"
                android:id="@+id/scores_list_item_away_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:contentDescription="@string/scores_list_item_away_name_content_description"
                android:id="@+id/scores_list_item_away_name"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scores_list_item_container">
    </FrameLayout>
</LinearLayout>


